added hw2 fix bugs

--- a/index.html
+++ b/index.html
@@ -5,109 +5,141 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <h2>WebStudio</h2>
   </head>
   <body>
     <header>
       <ul>
         <li>
-          <a href="/"><h2>WebStudio</h2></a>
+          <p><a href="/">Студія</a></p>
         </li>
         <li>
-          <a href="/">Студія</a>
+          <p><a href="/">Портфоліо</a></p>
         </li>
         <li>
-          <a href="/">Портфоліо</a>
-        </li>
-        <li>
-          <a href="/">Контакти</a>
+          <p><a href="/">Контакти</a></p>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="mailto:info@example.com">info@devstudio.com</a>
+          <p><a href="mailto:info@example.com">info@devstudio.com</a></p>
         </li>
         <li>
-          <a href="tel:380961111111">+38 096 111 11 11</a>
+          <p><a href="tel:380961111111">+38 096 111 11 11</a></p>
         </li>
       </ul>
     </header>
     <main>
-      <ul>
-        <li>
-          <button>Усе</button>
-        </li>
-        <li>
-          <button>Веб-сайти</button>
-        </li>
-        <li>
-          <button>Застосунки</button>
-        </li>
-        <li>
-          <button>Дизайн</button>
-        </li>
-        <li>
-          <button>Маркетинг</button>
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <img src="./img.png" width="200" height="150" alt="" />
-          <p><b>Технокряк</b></p>
-          <p>Веб-сайти</p>
-        </li>
-        <li>
-          <img src="./img-(1).png" width="200" height="150" alt="" />
-          <p><b>Постер New Orlean vs Golden Star</b></p>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <img src="./img-(2).png" width="200" height="150" alt="" />
-          <p><b>Ресторан Seafood</b></p>
-          <p>Застосунок</p>
-        </li>
-        <li>
-          <img src="./img-(3).png" width="200" height="150" alt="" />
-          <p><b>Проект Prime</b></p>
-          <p>Маркетинг</p>
-        </li>
-        <li>
-          <img src="./img-(4).png" width="200" height="150" alt="" />
-          <p><b>Проект Boxes</b></p>
-          <p>Застосунок</p>
-        </li>
-        <li>
-          <img src="./img-(5).png" width="200" height="150" alt="" />
-          <p><b>Inspiration has no Borders</b></p>
-          <p>Веб-сайти</p>
-        </li>
-        <li>
-          <img src="./img-(6).png" width="200" height="150" alt="" />
-          <p><b>Видавництво Limited Edition</b></p>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <img src="./img-(7).png" width="200" height="125" alt="" />
-          <p><b>Проект LAB</b></p>
-          <p>Маркетинг</p>
-        </li>
-        <li>
-          <img src="./img-(8).png" width="200" height="125" alt="" />
-          <p><b>Growing Business</b></p>
-          <p>Застосунок</p>
-        </li>
-      </ul>
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <p><button>Замовити послугу</button></p>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h4>УВАГА ДО ДЕТАЛЕЙ</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus
+              impedit quasi ducimus nihil dicta praesentium rem? Aspernatur
+              saepe autem aut repudiandae voluptates, est placeat nihil debitis
+              magni ducimus, omnis reprehenderit!
+            </p>
+          </li>
+          <li>
+            <h4>ПУНКТУАЛЬНІСТЬ</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
+              ullam dicta repellat rem possimus explicabo assumenda provident
+              eaque libero! Voluptatibus quod sed consequatur porro qui quaerat
+              asperiores nam nisi sequi?
+            </p>
+          </li>
+          <li>
+            <h4>ПЛАНУВАННЯ</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
+              blanditiis voluptatibus eaque repudiandae excepturi aut magnam
+              porro tenetur, perferendis veniam nobis nihil iusto fuga saepe
+              ducimus mollitia iste quae nam.
+            </p>
+          </li>
+          <li>
+            <h4>СУЧАСНІ ТЕЧНОЛОГІЇ</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Temporibus saepe beatae odit quam deleniti exercitationem ipsam
+              eum facilis tenetur dolores, laborum eligendi, natus commodi!
+              Commodi, repellat adipisci? Eveniet, reprehenderit dignissimos.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li><img src="./img/img-2/img-5.png" width="200" height="150" alt="Html" /></li>
+          <li><img src="./img/img-2/img-6.png" width="200" height="150" alt="Css" /></li>
+          <li>
+            <img src="./img/img-2/img-7.png" width="200" height="150" alt="JavaScript" />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наша комманда</h2>
+        <ul>
+          <li>
+            <img
+              src="./img/img-2/img-1.jpg"
+              width="200"
+              height="200"
+              alt="Ігор Дем’яненко"
+            />
+            <p><b>Ігор Дем’яненко</b></p>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./img/img-2/img-2.jpg"
+              width="200"
+              height="200"
+              alt="Ольга Репіна"
+            />
+            <p><b>Ольга Репіна</b></p>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./img/img-2/img-3.jpg"
+              width="200"
+              height="200"
+              alt="Микола Тарасов"
+            />
+            <p><b>Микола Тарасов</b></p>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./img/img-2/img-4.jpg"
+              width="200"
+              height="200"
+              alt="Михайло Єрмаков"
+            />
+            <p><b>Михайло Єрмаков</b></p>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
-      <a href="/"><h2>WebStudio</h2></a>
       <ul>
         <li>
           <p>м. Київ, пр-т Лесі Українки, 26</p>
         </li>
         <li>
-          <a href="mailto:info@example.com">info@example.com</a>
+          <p><a href="mailto:info@example.com">info@example.com</a></p>
         </li>
         <li>
-          <a href="tel:380961111111">+38 096 111 11 11</a>
+          <p><a href="tel:380961111111">+38 096 111 11 11</a></p>
         </li>
       </ul>
     </footer>
