--- a/portfolio.html
+++ b/portfolio.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>WebStudio</title>
-  </head>
-  <body>
+    <link rel="stylesheet" href="styli.css">
+<head>
+<body>
+  <h2>WebStudio</h2>
     <header>
-      <a href="/"><h2>WebStudio</h2></a>
       <ul>
         <li>
           <a href="/">Студія</a>
@@ -30,84 +31,73 @@
       </ul>
     </header>
     <main>
+      <section class="Button">
+        <button type="button">Усе</button>
+        <button type="button">Веб-сайти</button>
+        <button type="button">Застосунки</button>
+        <button type="button">Дизайн</button>
+        <button type="button">Маркетинг</button>
+      </section>
       <ul>
         <li>
-          <button type="button">Усе</button>
+         <img src="./img/img-3/img.png" alt="portfolio">
+        <p>Технокряк</p>
+        <p>Вебсайт</p>
         </li>
         <li>
-          <button type="button">Веб-сайти</button>
-        </li>
-        <li>
-          <button type="button">Застосунки</button>
-        </li>
-        <li>
-          <button type="button">Дизайн</button>
-        </li>
-        <li>
-          <button type="button">Маркетинг</button>
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <img src="./img/img-3/img.png" width="200" height="150" alt="Технокряк" />
-          <p><b>Технокряк</b></p>
-          <p>Веб-сайти</p>
-        </li>
-        <li>
-          <img src="./img/img-3/img-(1).png" width="200" height="150" alt="Постер New Orlean vs Golden Star" />
-          <p><b>Постер New Orlean vs Golden Star</b></p>
+          <img src="./img/img-3/img-(1).png" alt="portfolio1">
+          <p>Постер New Orlean vs Golden Star</p>
           <p>Дизайн</p>
         </li>
         <li>
-          <img src="./img/img-3/img-(2).png" width="200" height="150" alt="Ресторан Seafood" />
-          <p><b>Ресторан Seafood</b></p>
-          <p>Застосунок</p>
+        <img src="./img/img-3/img-(2).png" alt="portfolio2">
+        <p>Ресторан Seafood</p>
+        <p>Застосунок</p>
         </li>
         <li>
-          <img src="./img/img-3/img-(3).png" width="200" height="150" alt="Проект Prime" />
-          <p><b>Проект Prime</b></p>
+          <img src="./img/img-3/img-(3).png" alt="portfolio3">
+          <p>Проект Prime</p>
           <p>Маркетинг</p>
         </li>
         <li>
-          <img src="./img/img-3/img-(4).png" width="200" height="150" alt="Проект Boxes" />
-          <p><b>Проект Boxes</b></p>
+          <img src="./img/img-3/img-(4).png" alt="portfolio4">
+          <p>Проект Boxes</p>
           <p>Застосунок</p>
         </li>
         <li>
-          <img src="./img/img-3/img-(5).png" width="200" height="150" alt="Inspiration has no Borders" />
-          <p><b>Inspiration has no Borders</b></p>
-          <p>Веб-сайти</p>
+          <img src="./img/img-3/img-(5).png" alt="portfolio5">
+          <p>Inspiration has no Borders</p>
+          <p>Веб-сайт</p>
         </li>
         <li>
-          <img src="./img/img-3/img-(6).png" width="200" height="150" alt="Видавництво Limited Edition" />
-          <p><b>Видавництво Limited Edition</b></p>
+          <img src="./img/img-3/img-(6).png" alt="portfolio6">
+          <p>Видавництво Limited Edition</p>
           <p>Дизайн</p>
         </li>
         <li>
-          <img src="./img/img-3/img-(7).png" width="200" height="150" alt="Проект LAB" />
-          <p><b>Проект LAB</b></p>
+          <img src="./img/img-3/img-(7).png" alt="portfolio7">
+          <p>Проект LAB</p>
           <p>Маркетинг</p>
         </li>
         <li>
-          <img src="./img/img-3/img-(8).png" width="200" height="125" alt="Growing Business" />
-          <p><b>Growing Business</b></p>
+          <img src="./img/img-3/img-(8).png" alt="portfolio8">
+          <p>Growing Business</p>
           <p>Застосунок</p>
         </li>
       </ul>
     </main>
     <footer>
-      <a href="/"><h2>WebStudio</h2></a>
-      <ul>
-        <li>
-          <address>м. Київ, пр-т Лесі Українки, 26</address>
-        </li>
-        <li>
-          <a href="mailto:info@example.com">info@example.com</a>
-        </li>
-        <li>
-          <a href="tel:380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+          <p>м. Київ, пр-т Лесі Українки, 26</p>
+          <address>
+            <ul>
+             <li>
+              <a href="mailto:info@example.com">info@example.com</a>
+             </li>
+             <li>
+             <a href="tel:380961111111">+38 096 111 11 11</a>
+             </li>
+           </ul>
+          </address>
     </footer>
-  </body>
+</body>
 </html>
