--- a/index.html
+++ b/index.html
@@ -5,109 +5,119 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="style.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/reset.css">
 </head>
 <body>
-    <header class="header">
-        <ul>
-            <li>
-                <a href="/">Студія</a>
+    <header class="header-section">
+        <ul class="header-pages">
+            <li class="header-list">
+                <a href="/" class="Web">Web<span class="header-logo">Studio</span></a>
             </li>
             <li>
-                <a href="/">Портфоліо</a>
+                <a href="./index.html" class="header-studio">Студія</a>
             </li>
             <li>
-                <a href="/">Контакти</a>
+                <a class="header-portfolio" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li class="header-page" >
+                <a class="header-contact" href="#">Контакти</a>
             </li>
         </ul>
-        <ul>
-            <li>
-                <a href="mailto:info@example.com">info@devstudio.com</a>
+        <ul class="header-list">
+            <li class="header-item">
+                <a class="header-email" href="info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li>
-                <a href="tel:380961111111">+38 096 111 11 11</a>
+            <li class="header-item">
+                <a class="header-number" href="tel:380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
-    <main class="Main">
-        <section class="section">
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button class="button" type="button">Замовити послугу</button>
+    <main class="main-section">
+        <!-- Секція герой -->
+        <section class="hero-section">
+            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+            <button class="hero-button" type="button"><span class="hero-span">Замовити послугу</span></button>
         </section>
-        <section class="section2">
-            <ul>
-                <li>
-                    <h4>УВАГА ДО ДЕТАЛЕЙ</h4>
-                    <p>
+        <!-- Якости -->
+        <section class="qualities-section">
+            <ul class="qualities-list">
+                <li class="qualities-item">
+                    <h3 class="qualities-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="qualities-text">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus impedit quasi ducimus nihil dicta praesentium rem? Aspernatur saepe autem aut repudiandae voluptates, est placeat nihil debitis magni ducimus, omnis reprehenderit!
                     </p>
                 </li>
-                <li>
-                    <h4>ПУНКТУАЛЬНІСТЬ</h4>
-                    <p>
+                <li class="qualities-item">
+                    <h3 class="qualities-title">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="qualities-text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ullam dicta repellat rem possimus explicabo assumenda provident eaque libero! Voluptatibus quod sed consequatur porro qui quaerat asperiores nam nisi sequi?
                     </p>
                 </li>
-                <li>
-                    <h4>ПЛАНУВАННЯ</h4>
-                    <p>
+                <li class="qualities">
+                    <h3 class="qualities-title">ПЛАНУВАННЯ</h3>
+                    <p class="qualities-text">
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid blanditiis voluptatibus eaque repudiandae excepturi aut magnam porro tenetur, perferendis veniam nobis nihil iusto fuga saepe ducimus mollitia iste quae nam.
                     </p>
                 </li>
                 <li>
-                    <h4>СУЧАСНІ ТЕЧНОЛОГІЇ</h4>
-                    <p>
+                    <h3 class="qualities-title">СУЧАСНІ ТЕЧНОЛОГІЇ</h3>
+                    <p class="qualities-text">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus saepe beatae odit quam deleniti exercitationem ipsam eum facilis tenetur dolores, laborum eligendi, natus commodi! Commodi, repellat adipisci? Eveniet, reprehenderit dignissimos.
                     </p>
                 </li>
             </ul>
         </section>
-        <section class="section3">
-            <h2>Чим ми займаємося</h2>
-            <ul>
-                <li class="photo"><img src="img/img-2/./img-5.png" width="200" height="150" alt="Html"></li>
-                <li class="photo2"><img src="img/img-2/./img-6.png" width="200" height="150" alt="Css"></li>
-                <li class="photo3"><img src="img/img-2/img-7.png" width="200" height="150" alt="JavaScript"></li>
+        <section class="work-section">
+            <h2 class="work-title">Чим ми займаємося</h2>
+            <ul class="work-list">
+                <li class="work-item"><img class="work-img" src="img/img-2/./img-5.png" width="200" height="150" alt="html"></li>
+                <li class="work-item"><img class="work-img" src="img/img-2/./img-6.png" width="200" height="150" alt="css"></li>
+                <li class="work-item"><img class="work-img" src="img/img-2/img-7.png" width="200" height="150" alt="javaScript"></li>
             </ul>
         </section>
-        <section>
-            <h2>Наша комманда</h2>
-            <ul>
-                <li>
-                    <img src="img/img-2/img-1.jpg" width="200" height="200" alt="Ігор Дем’яненко">
-                    <p><b>Ігор Дем’яненко</b></p>
-                    <p>Product Designer</p>
+        <section class="team">
+            <h2 class="team-title">Наша комманда</h2>
+            <ul class="team-list">
+                <li class="team-item">
+                    <img class="team-img" src="img/img-2/img-1.jpg" width="200" height="200" alt="product designer">
+                    <p class="team-text">Ігор Дем’яненко</p>
+                    <p class="team-position">Product Designer</p>
                 </li>
-                <li>
-                    <img src="img/img-2/img-2.jpg" width="200" height="200" alt="Ольга Репіна">
-                    <p><b>Ольга Репіна</b></p>
-                    <p>Frontend Developer</p>
+                <li class="team-item">
+                    <img class="team-img" src="img/img-2/img-2.jpg" width="200" height="200" alt="frontend developer">
+                    <p class="team-text">Ольга Репіна</p>
+                    <p class="team-position">Frontend Developer</p>
                 </li>
-                <li>
-                    <img src="img/img-2/img-3.jpg" width="200" height="200" alt="Микола Тарасов">
-                    <p><b>Микола Тарасов</b></p>
-                    <p>Marketing</p>
+                <li class="team-item">
+                    <img class="team-img" src="img/img-2/img-3.jpg" width="200" height="200" alt="marketing">
+                    <p class="team-text">Микола Тарасов</p>
+                    <p class="team-position">Marketing</p>
                 </li>
-                <li>
-                    <img src="img/img-2/img-4.jpg" width="200" height="200" alt="Михайло Єрмаков">
-                    <p><b>Михайло Єрмаков</b></p>
-                    <p>UI Designer</p>
+                <li class="team-item">
+                    <img class="team-img" src="img/img-2/img-4.jpg" width="200" height="200" alt="ui designer">
+                    <p class="team-text">Михайло Єрмаков</p>
+                    <p class="team-position">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <address>
-            <p>м. Київ, пр-т Лесі Українки, 26</p>
-            <ul>
+    <footer class="footer">
+        <h2 class="footer-Web" href="/">Web<span class="footer-logo">Studio</span></h2>
+        <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
+            <ul class="footer-list">
                 <li>
-                <a href="mailto:info@example.com">info@example.com</a>
+                <a class="footer-email" href="info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li>
-                <a href="tel:380961111111">+38 096 111 11 11</a>
+                <li class="footer-item">
+                <a class="footer-contact" href="tel:380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
-        </address>
     </footer>
 </body>
 </html>
