--- a/portfolio.html
+++ b/portfolio.html
@@ -5,99 +5,116 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="styli.css">
-<head>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" href="./css/portfolio.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="./css/reset.css">
+</head>
 <body>
-  <h2>WebStudio</h2>
-    <header>
-      <ul>
-        <li>
-          <a href="/">Студія</a>
+    <header class="header">
+      <ul class="header-list">
+        <li class="header-item">
+          <a class="Web" href="./index.html">Web<span class="header-logo">Studio</span></a>
         </li>
         <li>
-          <a href="/">Портфоліо</a>
+          <a class="header-studio" href="/">Студія</a>
         </li>
-        <li>
-          <a href="/">Контакти</a>
+        <li class="header-item">
+          <a class="header-portfolio" href="./portfolio.html">Портфоліо</a>
+        </li>
+        <li class="header-item">
+          <a class="header-contact" href="/">Контакти</a>
         </li>
       </ul>
-      <ul>
-        <li>
-          <a href="mailto:info@example.com">info@devstudio.com</a>
+      <ul class="header-list">
+        <li class="header-item">
+          <a class="header-email" href="mailto:info@example.com">info@devstudio.com</a>
         </li>
-        <li>
-          <a href="tel:380961111111">+38 096 111 11 11</a>
+        <li class="header-item">
+          <a class="header-number" href="tel:380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
-    <main>
-      <section class="Button">
-        <button type="button">Усе</button>
-        <button type="button">Веб-сайти</button>
-        <button type="button">Застосунки</button>
-        <button type="button">Дизайн</button>
-        <button type="button">Маркетинг</button>
+    <main class="main-section">
+      <section class="buttons-section">
+        <ul class="buttons-list">
+          <li class="buttons-item">
+        <button type="button" class="buttons-items"><span class="buttons-span">Усе</span></button>
+          </li>
+          <li class="buttons-item">
+        <button type="button" class="buttons-item">Веб-сайти<span class="button-span"></span></button>
+          </li>
+          <li class="buttons-item">
+        <button type="button" class="buttons-item">Застосунки<span class="button-span"></span></button>
+          </li>
+          <li class="buttons-item">
+        <button type="button" class="buttons-item">Дизайн<span class="button-span"></span></button>
+          </li>
+          <li class="buttons-item">
+        <button type="button" class="buttons-item">Маркетинг<span class="button-span"></span></button>
+          </li>
+        </ul>
       </section>
-      <ul>
-        <li>
-         <img src="./img/img-3/img.png" alt="portfolio">
-        <p>Технокряк</p>
-        <p>Вебсайт</p>
+      <ul class="poster-list">
+        <li class="poster-item">
+         <img class="poster-img" src="./img/img-3/img.png" alt="Вебсайт">
+        <p class="poster-text">Технокряк</p>
+        <p class="poster-description">Вебсайт</p>
         </li>
-        <li>
-          <img src="./img/img-3/img-(1).png" alt="portfolio1">
-          <p>Постер New Orlean vs Golden Star</p>
-          <p>Дизайн</p>
+        <li class="poster-item">
+          <img class="poster-img" src="./img/img-3/img-(1).png" alt="Дизайн">
+          <p class="poster-text">Постер New Orlean vs Golden Star</p>
+          <p class="poster-description">Дизайн</p>
         </li>
-        <li>
-        <img src="./img/img-3/img-(2).png" alt="portfolio2">
-        <p>Ресторан Seafood</p>
-        <p>Застосунок</p>
+        <li class="poster-item">
+        <img class="poster-img" src="./img/img-3/img-(2).png" alt="Застосунок">
+        <p class="poster-text">Ресторан Seafood</p>
+        <p class="poster-description">Застосунок</p>
         </li>
-        <li>
-          <img src="./img/img-3/img-(3).png" alt="portfolio3">
-          <p>Проект Prime</p>
-          <p>Маркетинг</p>
+        <li class="poster-item">
+          <img class="poster-img" src="./img/img-3/img-(3).png" alt="Маркетинг">
+          <p class="poster-text">Проект Prime</p>
+          <p class="poster-description">Маркетинг</p>
         </li>
-        <li>
-          <img src="./img/img-3/img-(4).png" alt="portfolio4">
-          <p>Проект Boxes</p>
-          <p>Застосунок</p>
+        <li class="poster-item">
+          <img class="poster-img" src="./img/img-3/img-(4).png" alt="Застосунок">
+          <p class="poster-text">Проект Boxes</p>
+          <p class="poster-description">Застосунок</p>
         </li>
-        <li>
-          <img src="./img/img-3/img-(5).png" alt="portfolio5">
-          <p>Inspiration has no Borders</p>
-          <p>Веб-сайт</p>
+        <li class="poster-item">
+          <img class="poster-img" src="./img/img-3/img-(5).png" alt="Веб-сайт">
+          <p class="poster-text">Inspiration has no Borders</p>
+          <p class="poster-description">Веб-сайт</p>
         </li>
-        <li>
-          <img src="./img/img-3/img-(6).png" alt="portfolio6">
-          <p>Видавництво Limited Edition</p>
-          <p>Дизайн</p>
+        <li class="poster-item">
+          <img class="poster-img" src="./img/img-3/img-(6).png" alt="Дизайн">
+          <p class="poster-text">Видавництво Limited Edition</p>
+          <p class="poster-description">Дизайн</p>
         </li>
-        <li>
-          <img src="./img/img-3/img-(7).png" alt="portfolio7">
-          <p>Проект LAB</p>
-          <p>Маркетинг</p>
+        <li class="poster-item">
+          <img class="poster-img" src="./img/img-3/img-(7).png" alt="Маркетинг">
+          <p class="poster-text">Проект LAB</p>
+          <p class="poster-description">Маркетинг</p>
         </li>
-        <li>
-          <img src="./img/img-3/img-(8).png" alt="portfolio8">
-          <p>Growing Business</p>
-          <p>Застосунок</p>
+        <li class="poster-item">
+          <img class="poster-img" src="./img/img-3/img-(8).png" alt="Застосунок">
+          <p class="poster-text">Growing Business</p>
+          <p class="poster-description">Застосунок</p>
         </li>
       </ul>
     </main>
-    <footer>
-          <p>м. Київ, пр-т Лесі Українки, 26</p>
-          <address>
-            <ul>
-             <li>
-              <a href="mailto:info@example.com">info@example.com</a>
+    <footer class="footer">
+      <h2 class="footer-Web">Web<span class="footer-logo">Studio</span></h2>
+      <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
+            <ul class="footer-list">
+             <li class="footer-item">
+              <a class="footer-email" href="mailto:info@example.com">info@example.com</a>
              </li>
-             <li>
-             <a href="tel:380961111111">+38 096 111 11 11</a>
+             <li class="footer-item">
+             <a class="footer-number" href="tel:380961111111">+38 096 111 11 11</a>
              </li>
            </ul>
-          </address>
     </footer>
 </body>
 </html>
