--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </ul>
       </div>
     </section>
-    <section class="team">
+    <section class="team-section">
       <div class="container">            <h2 class="team-title">Наша комманда</h2>
         <ul class="team-list">
           <li class="team-item">
@@ -108,6 +108,7 @@
     </section>
   </main>
   <footer class="footer">
+    <section class="footer-section"></section>
     <div class="container">
         <h2 class="footer-Web">Web<span class="footer-logo">Studio</span></h2>
         <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
