--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
   <header class="header">
     <section class="header-section">
       <div class="container">
+        <a href="/" class="Web">Web<span class="header-logo">Studio</span></a>
         <ul class="header-pages">
-          <li class="header-list">
-            <a href="/" class="Web">Web<span class="header-logo">Studio</span></a>
-          </li>
           <li class="header-list">
             <a class="header-link" href="./index.html">Студія</a>
           </li>
@@ -81,7 +79,8 @@
       </div>
     </section>
     <section class="team-section">
-      <div class="container">            <h2 class="team-title">Наша комманда</h2>
+      <div class="container">
+        <h2 class="team-title">Наша комманда</h2>
         <ul class="team-list">
           <li class="team-item">
             <img class="team-img" src="img/img-2/img-1.jpg" width="200" height="200" alt="product designer">
